fix: header overflow

--- a/style.css
+++ b/style.css
@@ -120,6 +120,10 @@ a{
     font-weight: bold;
 }
 
+.overflow{
+    overflow-y: auto;
+}
+
 /*----------
     HEADER
 ------------*/
